--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 markdown: redcarpet
 pygments: true
 
-title_tag_text: Solo, a Jekyll Theme
-h1_tag_text: Solo
+title_tag_text: Mike Sandt, Web Developer
+h1_tag_text: Hi, I'm Mike!
