About me page cleanup and various style fixes

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: Your New Jekyll Site
-description: Blogging about stuffs
+name: Mike Sandt
+description: Developer Ramblings
 meta_description: "Your New Jekyll Site, Blogging about stuffs"
 
 aboutPage: true
@@ -15,8 +15,8 @@ disqus_shortname: 'your-disqus-shortname'
 
 # Details for the RSS feed generator
 url:            'http://your-blog-url.example.com'
-author:         'Your Name'
-authorTwitter:  'YourTwitterUsername'
+author:         'Mike Sandt'
+authorTwitter:  'mikesandt'
 
 permalink:       /:year/:title/
 
