Code Wheel Celly

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Mike Sandt
-description: Developer Ramblings
+description: Code. Wheel. Celly.
 meta_description: "Your New Jekyll Site, Blogging about stuffs"
 
 aboutPage: true
